
Revision history for Perl module Eval::LineNumbers

0.32 2013/10/01

 - use 'herdoc' instead of 'hereis'
 - add Google copyright
 - rename CHANGELOG to Changes

0.31 2009/09/01

 - Minor documentation changes.

0.3 2009/07/24

 - Initial version