@@ -6,6 +6,8 @@ Revision history for Perl module Eval::LineNumbers
  - use 'herdoc' instead of 'hereis'
  - add Google copyright
  - rename CHANGELOG to Changes
+ - add README
+ - create git repository, add link
 
 0.31 2009/09/01
 
